--- a/package.json
+++ b/package.json
@@ -13,23 +13,29 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@havesource/cordova-plugin-push": "^5.0.5",
     "cordova-android": "^14.0.1",
     "cordova-browser": "^7.0.0",
+    "cordova-plugin-badge-fix": "^0.8.10",
     "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-dialogs": "^2.0.2",
-    "cordova-plugin-local-notification": "^1.1.8",
-    "cordova-plugin-push": "^0.0.1"
+    "cordova-plugin-local-notification-12": "^0.1.4",
+    "cordova-plugin-local-notifications": "^1.0.0",
+    "cordova-plugin-push": "^0.0.1",
+    "de.appplant.cordova.plugin.local-notification": "^0.8.5"
   },
   "cordova": {
     "platforms": [
-      "browser",
-      "android"
+      "browser"
     ],
     "plugins": {
-      "cordova-plugin-local-notification": {},
-      "@havesource/cordova-plugin-push": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-device": {},
+      "de.appplant.cordova.plugin.local-notification": {},
+      "cordova-plugin-local-notification-12": {
+        "ANDROID_SUPPORT_V4_VERSION": "26.+",
+        "ANDROIDX_VERSION": "1.2.0",
+        "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
+      }
     }
   }
 }
