--- a/package.json
+++ b/package.json
@@ -12,30 +12,24 @@
   ],
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "cordova-android": "^13.0.0",
-    "cordova-browser": "^7.0.0",
-    "cordova-plugin-badge-fix": "^0.8.10",
-    "cordova-plugin-device": "^3.0.0",
-    "cordova-plugin-dialogs": "^2.0.2",
-    "cordova-plugin-local-notification-12": "^0.1.4",
-    "cordova-plugin-local-notifications": "^1.0.0",
-    "cordova-plugin-push": "^0.0.1"
-  },
   "cordova": {
     "platforms": [
       "browser",
       "android"
     ],
     "plugins": {
-      "cordova-plugin-badge-fix": {},
+      "cordova-plugin-local-notification": {
+        "ANDROIDX_CORE_VERSION": "1.12.0"
+      },
       "cordova-plugin-device": {},
-      "cordova-plugin-dialogs": {},
-      "cordova-plugin-local-notification-12": {
-        "ANDROID_SUPPORT_V4_VERSION": "26.+",
-        "ANDROIDX_VERSION": "1.2.0",
-        "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
-      }
+      "cordova-plugin-android-permissions": {}
     }
+  },
+  "devDependencies": {
+    "cordova-android": "^14.0.1",
+    "cordova-browser": "^7.0.0",
+    "cordova-plugin-android-permissions": "github:NeoLSN/cordova-plugin-android-permissions",
+    "cordova-plugin-device": "^3.0.0",
+    "cordova-plugin-local-notification": "github:katzer/cordova-plugin-local-notifications"
   }
 }
