--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
         "ANDROIDX_CORE_VERSION": "1.12.0"
       },
       "cordova-plugin-device": {},
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-dialogs": {}
     }
   },
   "devDependencies": {
     "cordova-android": "^13.0.0",
     "cordova-browser": "^7.0.0",
     "cordova-plugin-android-permissions": "github:NeoLSN/cordova-plugin-android-permissions",
+    "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-device": "^3.0.0",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-local-notification": "github:katzer/cordova-plugin-local-notifications"
   }
 }
